--- a/packages/nxp-server/package.json
+++ b/packages/nxp-server/package.json
@@ -13,6 +13,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@nxp/nxp-core": "^1.0.0"
+    "@nxp/nxp-core": "^1.0.0",
+    "dotenv": "^6.0.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.0",
+    "backpack-core": "^0.7.0",
+    "concurrently": "^3.6.1",
+    "cross-env": "^5.2.0",
+    "shelljs": "^0.8.2",
+    "typedoc": "^0.11.1",
+    "typedoc-webpack-plugin": "^1.1.4"
   }
 }
