--- a/packages/nxp-server/tsconfig.module.json
+++ b/packages/nxp-server/tsconfig.module.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "lib"
+    "outDir": "build"
   },
-  "exclude": ["node_modules", "lib", "src/**/*.spec.ts", "src/**/*.itest.ts"]
+  "exclude": ["node_modules", "build", "src/**/*.spec.ts", "src/**/*.itest.ts"]
 }
