--- a/packages/nxp-server/tsconfig.json
+++ b/packages/nxp-server/tsconfig.json
@@ -1,3 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "build"
+  },
+  "exclude": ["node_modules", "build", "src/**/*.spec.ts", "src/**/*.itest.ts"]
 }
