--- a/packages/nxp-core/package.json
+++ b/packages/nxp-core/package.json
@@ -22,12 +22,17 @@
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
     "express-partial-response": "^0.3.4",
     "express-physical": "^0.5.2",
+    "express-pino-logger": "^3.0.2",
     "helmet": "^3.13.0",
     "inversify": "^4.13.0",
     "inversify-express-utils": "^6.1.0",
+    "pino": "^4.17.5",
     "prom-client": "^11.1.1",
+    "reflect-metadata": "^0.1.12",
+    "response-time": "^2.3.2",
     "swagger-express-middleware": "1.0.0-alpha.12",
     "swagger-ui-express": "^3.0.10",
     "yamljs": "^0.3.0"
