--- a/packages/nxp-server/package.json
+++ b/packages/nxp-server/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
-  "typings": "build/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.module.json",
-    "clean": "rimraf lib",
+    "clean": "rimraf build",
     "prepare": "yarn run compile",
-    "compile": "cross-env NODE_ENV=production node build.js && webpack --config webpack.config.js",
-    "compile:dev": "cross-env NODE_ENV=development node build.js && webpack --config webpack.config.js",
+    "compile": "cross-env NODE_ENV=production node build.js && backpack build",
+    "compile:dev": "cross-env NODE_ENV=development node build.js && backpack build",
     "dev": "cross-env NODE_ENV=development node build.js && backpack dev",
     "dev:debug": "cross-env NODE_ENV=development node build.js && cross-env DEBUG=express:* backpack dev",
     "dash": "nodejs-dashboard -- node -r nodejs-dashboard build/main",
@@ -26,18 +25,19 @@
   "dependencies": {
     "@nxp/nxp-core": "^1.0.0",
     "dotenv": "^6.0.0",
-    "reflect-metadata": "^0.1.12"
+    "inversify": "^4.13.0",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.10",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
+    "rxjs": "^6.2.2",
+    "source-map-support": "^0.5.6"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
-    "awesome-typescript-loader": "^5.2.0",
     "concurrently": "^3.6.1",
     "cross-env": "^5.2.0",
     "shelljs": "^0.8.2",
-    "ts-node": "^7.0.0",
-    "typedoc": "^0.11.1",
-    "typedoc-webpack-plugin": "^1.1.4",
-    "webpack": "^4.16.2",
-    "webpack-command": "^0.4.1"
+    "ts-node": "^7.0.0"
   }
 }
