--- a/packages/nxp-server/package.json
+++ b/packages/nxp-server/package.json
@@ -12,7 +12,7 @@
     "dev": "cross-env NODE_ENV=development node build.js && backpack dev",
     "dev:debug": "cross-env NODE_ENV=development node build.js && cross-env DEBUG=express:* backpack dev",
     "dash": "nodejs-dashboard -- node -r nodejs-dashboard build/main",
-    "test": "cross-env NODE_ENV=test node build.js && npm run lint && jest --forceExit --config unit.config.json",
+    "test": "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json",
     "test:dev": "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json",
     "lint": "npm run tslint -- -o reports/lint_issues.json -t json --force \"server/**/*.ts\" ",
     "lint:console": "npm run tslint -- --force \"server/**/*.ts\" ",
@@ -35,9 +35,15 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/jest": "^23.3.0",
     "concurrently": "^3.6.1",
     "cross-env": "^5.2.0",
+    "jest": "^23.4.1",
+    "jest-sonar-reporter": "^2.0.0",
     "shelljs": "^0.8.2",
-    "ts-node": "^7.0.0"
+    "supertest": "^3.1.0",
+    "ts-jest": "^23.0.1",
+    "ts-node": "^7.0.0",
+    "wait-port": "^0.2.2"
   }
 }
