--- a/packages/nxp-server/unit.config.json
+++ b/packages/nxp-server/unit.config.json
@@ -1,14 +1,11 @@
 {
   "moduleFileExtensions": ["js", "jsx", "json", "ts", "tsx"],
-  "testResultsProcessor": "jest-sonar-reporter",
   "transform": {
-    "^.+\\.(ts|tsx)$": "./node_modules/ts-jest/preprocessor.js"
+    "^.+\\.(ts|tsx)$": "ts-jest"
   },
   "testMatch": ["**/src/**/*.spec.(ts)"],
   "testEnvironment": "node",
   "collectCoverage": true,
-  "coverageReporters": ["lcov"],
-  "coverageDirectory": "coverage",
   "collectCoverageFrom": [
     "**/src/**/*.{ts}",
     "!**/node_modules/**",
