--- a/packages/nxp-server/itest.config.json
+++ b/packages/nxp-server/itest.config.json
@@ -1,8 +1,7 @@
 {
   "moduleFileExtensions": ["js", "jsx", "json", "ts", "tsx"],
-  "testResultsProcessor": "jest-sonar-reporter",
   "transform": {
-    "^.+\\.(ts|tsx)$": "./node_modules/ts-jest/preprocessor.js"
+    "^.+\\.(ts|tsx)$": "ts-jest"
   },
   "testMatch": ["**/src/**/*.itest.(ts)"],
   "testEnvironment": "node"
