--- a/packages/nxp-core/tsconfig.module.json
+++ b/packages/nxp-core/tsconfig.module.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "lib"
+    "outDir": "lib",
+    "moduleResolution": "node"
   },
   "exclude": ["node_modules", "lib", "src/**/*.spec.ts", "src/**/*.itest.ts"]
 }
