Added missing dependency

--- a/packages/nxp-server/package.json
+++ b/packages/nxp-server/package.json
@@ -41,6 +41,7 @@
     "inversify-express-utils": "^6.1.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
+    "node-fetch": "^2.2.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "rxjs": "^6.2.2",
