--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ jobs:
   include:
     - stage: unit
       script:
-        - yarn boostrap
+        - yarn bootstrap
         - yarn test
     - stage: itest
       script:
-        - yarn boostrap
+        - yarn bootstrap
         - yarn itest
     # - stage: package
     #   script:
