--- a/packages/nxp-server/unit.config.json
+++ b/packages/nxp-server/unit.config.json
@@ -8,6 +8,7 @@
   "collectCoverage": true,
   "collectCoverageFrom": [
     "**/src/**/*.{ts}",
+    "!**/src/**/*.itest.{ts}",
     "!**/node_modules/**",
     "!**/build/**"
   ]
