--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nxplorerjs-micro-starter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Express Microservice Starter Mono Repo",
   "main": "index.js",
   "author": "Tarun Kumar Sukhu <tksukhu@gmail.com>",
@@ -13,6 +13,7 @@
     "itest": "lerna run itest --stream",
     "start": "lerna run start --stream",
     "prepare": "lerna run prepare --stream",
+    "release": "lerna publish --skip-npm --skip-git",
     "clean": "lerna run clean --stream",
     "serve": "lerna run serve --stream",
     "prettier:base": "prettier --parser typescript --single-quote",
@@ -36,5 +37,6 @@
     "typedoc": "^0.11.1",
     "typedoc-webpack-plugin": "^1.1.4",
     "typescript": "^2.9.2"
-  }
+  },
+  "repository": "https://github.com/ERS-HCL/nxplorerjs-mono-starter.git"
 }
