Added swapi server

--- a/packages/nxp-swapi-server/.test.env
+++ b/packages/nxp-swapi-server/.test.env
@@ -1,27 +1,15 @@
-APP_ID=nxplorerjs-microservice
-PORT=3000
+APP_ID=swapi-microservice
+PORT=4000
 LOG_LEVEL=info
-REQUEST_LIMIT=100kb
-SESSION_SECRET=mySecret
 JWT_AUTH=false
-RSA_PRIVATE_KEY_FILE=./jwtRS256.key
-TOKEN_EXPIRY_TIME=1h
-RSA_PUBLIC_KEY_FILE=./jwtRS256.key.pub
 API_TIME_OUT=10000
-TEST_TIME_OUT=60000
-STREAM_HYSTRIX=false
-CORS=false
-CLUSTER_MODE=false
-GRAPHQL_SUBSCRIPTIONS=true
-GRAPHQL_PLAYGROUND=false
-GRAPHQL_TRACING=false
-GRAPHQL_MOCK=false
-API_MOCK=false
-
-#Swagger
-SWAGGER_API_DOCS_ROOT=/api/api-docs
+TEST_TIME_OUT=10000
+GRAPHQL_SUBSCRIPTIONS=false
+GRAPHQL_PLAYGROUND=true
+GRAPHQL_TRACING=true
+GRAPHQL_MOCK=true
+API_MOCK=true
 
 # API Base URLS
 SWAPI_BASE_URL=http://swapi.co/api
 JSON_PLACEHOLDER_BASE_URL=http://jsonplaceholder.typicode.com
-GRAPH_COOL_API_BASE_URL=https://api.graph.cool/simple/v1/
