--- a/packages/nxp-server/.development.env
+++ b/packages/nxp-server/.development.env
@@ -24,4 +24,4 @@ SWAGGER_API_DOCS_ROOT=/api/api-docs
 # API Base URLS
 SWAPI_BASE_URL=http://swapi.co/api
 JSON_PLACEHOLDER_BASE_URL=http://jsonplaceholder.typicode.com
-GRAPH_COOL_API_BASE_URL=https://api.graph.cool/simple/v1/
+GRAPH_COOL_API_BASE_URL=https://api.graph.cool/simple/v1
