Added schema stitching

--- a/packages/nxp-server/package.json
+++ b/packages/nxp-server/package.json
@@ -28,6 +28,7 @@
     "@nxp/nxp-core": "^1.0.1",
     "apollo-datasource-rest": "^0.1.0",
     "apollo-errors": "1.9.0",
+    "apollo-link-http": "^1.5.4",
     "apollo-server": "2.1.0-alpha.8",
     "apollo-server-express": "2.1.0-alpha.8",
     "casual": "^1.5.19",
@@ -44,6 +45,7 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "node-fetch": "^2.2.0",
+    "progress": "^2.0.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "rxjs": "^6.2.2",
