clean up environment configuration

--- a/packages/nxp-server/.development.env
+++ b/packages/nxp-server/.development.env
@@ -1,5 +1,7 @@
 APP_ID=nxplorerjs-microservice
 PORT=3000
+HYSTRIX_PORT=3001
+SWAPI_SERVER_PORT=4000
 LOG_LEVEL=info
 REQUEST_LIMIT=100kb
 SESSION_SECRET=mySecret
