--- a/packages/nxp-core/package.json
+++ b/packages/nxp-core/package.json
@@ -26,6 +26,7 @@
     "brakes": "^2.6.0",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
+    "cross-var": "^1.1.0",
     "csurf": "^1.9.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
