--- a/packages/nxp-server/package.json
+++ b/packages/nxp-server/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.1",
   "description": "microservice (business apis)",
   "main": "build/index.js",
+  "config": {
+    "swapi_port": "4000"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.module.json",
     "clean": "rimraf build",
@@ -10,7 +13,8 @@
     "compile": "cross-env NODE_ENV=production node build.js && backpack build",
     "compile:dev": "cross-env NODE_ENV=development node build.js && backpack build",
     "start": "cross-env NODE_ENV=development node build.js && backpack dev",
-    "serve": "node build/main.js",
+    "serve": "cross-var wait-port localhost:$npm_package_config_swapi_port && node build/main.js",
+    "serve:standalone": "node build/main.js",
     "dev:debug": "cross-env NODE_ENV=development node build.js && cross-env DEBUG=express:* backpack dev",
     "dash": "nodejs-dashboard -- node -r nodejs-dashboard build/main",
     "test": "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json --detectOpenHandles",
@@ -32,6 +36,7 @@
     "apollo-server": "2.1.0-alpha.8",
     "apollo-server-express": "2.1.0-alpha.8",
     "casual": "^1.5.19",
+    "cross-var": "^1.1.0",
     "dataloader": "^1.4.0",
     "dateformat": "^3.0.3",
     "dotenv": "^6.0.0",
