--- a/packages/nxp-swapi-server/package.json
+++ b/packages/nxp-swapi-server/package.json
@@ -8,21 +8,15 @@
     "clean": "rimraf build",
     "prepare": "yarn run compile",
     "compile": "cross-env NODE_ENV=production node build.js && backpack build",
-    "compile:dev":
-      "cross-env NODE_ENV=development node build.js && backpack build",
+    "compile:dev": "cross-env NODE_ENV=development node build.js && backpack build",
     "start": "cross-env NODE_ENV=development node build.js && backpack dev",
     "serve": "node build/main.js",
-    "dev:debug":
-      "cross-env NODE_ENV=development node build.js && cross-env DEBUG=express:* backpack dev",
+    "dev:debug": "cross-env NODE_ENV=development node build.js && cross-env DEBUG=express:* backpack dev",
     "dash": "nodejs-dashboard -- node -r nodejs-dashboard build/main",
-    "test":
-      "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json --detectOpenHandles",
-    "test:dev":
-      "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json --detectOpenHandles",
-    "itest:build":
-      "cross-env NODE_ENV=test node build.js && cross-env NODE_ENV=test backpack build",
-    "itest:run":
-      "concurrent --kill-others --success first \"cd build && node main\" \"wait-port localhost:4000 && jest --forceExit --config itest.config.json\"",
+    "test": "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json --detectOpenHandles",
+    "test:dev": "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json --detectOpenHandles",
+    "itest:build": "cross-env NODE_ENV=test node build.js && cross-env NODE_ENV=test backpack build",
+    "itest:run": "concurrent --kill-others --success first \"cd build && node main\" \"wait-port localhost:4000 && jest --forceExit --config itest.config.json\"",
     "itest": "yarn itest:build && yarn itest:run",
     "wait-port": "wait-port",
     "jest": "jest --config unit.config.json"
@@ -37,6 +31,7 @@
     "apollo-server": "2.1.0-alpha.8",
     "apollo-server-express": "2.1.0-alpha.8",
     "casual": "^1.5.19",
+    "cross-var": "^1.1.0",
     "dataloader": "^1.4.0",
     "dateformat": "^3.0.3",
     "dotenv": "^6.0.0",
