--- a/packages/nxp-server/package.json
+++ b/packages/nxp-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nxp/nxp-server",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "microservice (business apis)",
   "main": "build/index.js",
   "config": {
@@ -12,7 +12,7 @@
     "prepare": "yarn run compile",
     "compile": "cross-env NODE_ENV=production node build.js && backpack build",
     "start": "cross-env NODE_ENV=development node build.js && backpack dev",
-    "serve": "cross-var wait-port -t 5000 localhost:$npm_package_config_swapi_port && node build/main.js",
+    "serve": "cross-var wait-port -t 60000 localhost:$npm_package_config_swapi_port && node build/main.js",
     "serve:standalone": "node build/main.js",
     "dev:debug": "cross-env NODE_ENV=development node build.js && cross-env DEBUG=express:* backpack dev",
     "dash": "nodejs-dashboard -- node -r nodejs-dashboard build/main",
@@ -28,12 +28,12 @@
   "author": "Tarun Sukhu(tksukhu@gmail.com)",
   "license": "MIT",
   "dependencies": {
-    "@nxp/nxp-core": "^1.1.0",
-    "apollo-datasource-rest": "^0.1.0",
+    "@nxp/nxp-core": "^1.1.1",
+    "apollo-datasource-rest": "^2.0.0-rc.8",
     "apollo-errors": "1.9.0",
     "apollo-link-http": "^1.5.4",
-    "apollo-server": "2.1.0-alpha.8",
-    "apollo-server-express": "2.1.0-alpha.8",
+    "apollo-server": "2.1.0-alpha.10",
+    "apollo-server-express": "2.1.0-alpha.10",
     "casual": "^1.5.19",
     "cross-var": "^1.1.0",
     "dataloader": "^1.4.0",
@@ -57,17 +57,17 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
-    "@types/graphql": "^0.13.3",
-    "@types/jest": "^23.3.0",
+    "@types/graphql": "^0.13.4",
+    "@types/jest": "^23.3.1",
     "concurrent": "^0.3.2",
     "concurrently": "^3.6.1",
     "cross-env": "^5.2.0",
     "graphql-tester": "^0.0.5",
-    "jest": "^23.4.1",
+    "jest": "^23.4.2",
     "jest-sonar-reporter": "^2.0.0",
     "shelljs": "^0.8.2",
     "supertest": "^3.1.0",
-    "ts-jest": "^23.0.1",
+    "ts-jest": "^23.1.3",
     "ts-node": "^7.0.0",
     "wait-port": "^0.2.2"
   },
