--- a/packages/nxp-server/package.json
+++ b/packages/nxp-server/package.json
@@ -16,8 +16,8 @@
     "serve:standalone": "node build/main.js",
     "dev:debug": "cross-env NODE_ENV=development node build.js && cross-env DEBUG=express:* backpack dev",
     "dash": "nodejs-dashboard -- node -r nodejs-dashboard build/main",
-    "test": "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json --detectOpenHandles",
-    "test:dev": "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json",
+    "test:dev": "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json",
     "itest:build": "cross-env NODE_ENV=test node build.js && cross-env NODE_ENV=test backpack build",
     "itest:run": "concurrent --kill-others --success first \"cd build && node main\" \"wait-port localhost:3000 && jest --forceExit --config itest.config.json\"",
     "itest": "yarn itest:build && yarn itest:run",
