--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nxplorerjs-micro-starter",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Express Microservice Starter Mono Repo",
   "main": "index.js",
   "author": "Tarun Kumar Sukhu <tksukhu@gmail.com>",
@@ -17,12 +17,9 @@
     "clean": "lerna run clean --stream",
     "serve": "lerna run serve --stream",
     "prettier:base": "prettier --parser typescript --single-quote",
-    "prettier:check":
-      "npm run prettier:base -- --list-different \"packages/**/*.{ts,tsx}\"",
-    "prettier:write":
-      "npm run prettier:base -- --write \"packages/**/*.{ts,tsx}\"",
-    "lint":
-      "npm run tslint -- --force \"packages/**/*.{ts,tsx}\" -e \"**/lib/**\" -e \"**/build/**\"",
+    "prettier:check": "npm run prettier:base -- --list-different \"packages/**/*.{ts,tsx}\"",
+    "prettier:write": "npm run prettier:base -- --write \"packages/**/*.{ts,tsx}\"",
+    "lint": "npm run tslint -- --force \"packages/**/*.{ts,tsx}\" -e \"**/lib/**\" -e \"**/build/**\"",
     "tslint": "tslint"
   },
   "devDependencies": {
