--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
-  "lerna": "2.11.0",
-  "packages": [
-    "packages/*"
-  ],
+  "lerna": "3.1.1",
+  "packages": ["packages/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "1.1.2"
