--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   "devDependencies": {
     "awesome-typescript-loader": "4.0.1",
     "backpack-core": "^0.7.0",
-    "lerna": "^3.0.0-rc.0",
+    "lerna": "^3.1.1",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
     "tslint-config-standard": "^7.1.0",
-    "typedoc": "^0.11.1",
+    "typedoc": "^0.12.0",
     "typedoc-webpack-plugin": "^1.1.4",
     "typescript": "^3.0.1"
   },
