--- a/packages/nxp-core/package.json
+++ b/packages/nxp-core/package.json
@@ -9,11 +9,7 @@
     "clean": "rimraf lib",
     "prepare": "yarn run clean && yarn run build"
   },
-  "keywords": [
-    "express",
-    "graphql",
-    "inversify"
-  ],
+  "keywords": ["express", "graphql", "inversify"],
   "author": "Tarun Sukhu (tksukhu@gmail.com)",
   "license": "MIT",
   "devDependencies": {
@@ -35,7 +31,7 @@
     "helmet": "^3.13.0",
     "inversify": "^4.13.0",
     "inversify-express-utils": "^6.1.0",
-    "pino": "^5.0.0",
+    "pino": "^5.1.1",
     "prom-client": "^11.1.1",
     "reflect-metadata": "^0.1.12",
     "response-time": "^2.3.2",
