--- a/packages/nxp-core/package.json
+++ b/packages/nxp-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nxp/nxp-core",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Core Platform Module",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -9,7 +9,11 @@
     "clean": "rimraf lib",
     "prepare": "yarn run clean && yarn run build"
   },
-  "keywords": ["express", "graphql", "inversify"],
+  "keywords": [
+    "express",
+    "graphql",
+    "inversify"
+  ],
   "author": "Tarun Sukhu (tksukhu@gmail.com)",
   "license": "MIT",
   "devDependencies": {
