--- a/packages/nxp-server/package.json
+++ b/packages/nxp-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nxp/nxp-server",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "microservice (business apis)",
   "main": "build/index.js",
   "config": {
@@ -19,7 +19,7 @@
     "test": "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json",
     "test:dev": "cross-env NODE_ENV=test node build.js && jest --forceExit --config unit.config.json",
     "itest:build": "cross-env NODE_ENV=test node build.js && cross-env NODE_ENV=test backpack build",
-    "itest:run": "concurrent --kill-others --success first \"cd build && node main\" \"wait-port localhost:3000 && jest --forceExit --config itest.config.json\"",
+    "itest:run": "concurrently --kill-others --success first \"cd build && node main\" \"wait-port localhost:3000 && jest --forceExit --config itest.config.json\"",
     "itest": "yarn itest:build && yarn itest:run",
     "wait-port": "wait-port",
     "jest": "jest --config unit.config.json"
@@ -28,7 +28,7 @@
   "author": "Tarun Sukhu(tksukhu@gmail.com)",
   "license": "MIT",
   "dependencies": {
-    "@nxp/nxp-core": "^1.1.3",
+    "@nxp/nxp-core": "^1.1.4",
     "apollo-datasource-rest": "^2.0.0-rc.8",
     "apollo-errors": "1.9.0",
     "apollo-link-http": "^1.5.4",
@@ -52,22 +52,21 @@
     "progress": "^2.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "rxjs": "^6.2.2"
+    "rxjs": "^6.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/graphql": "^0.13.4",
     "@types/jest": "^23.3.1",
-    "concurrent": "^0.3.2",
-    "concurrently": "^3.6.1",
+    "concurrently": "^4.0.1",
     "cross-env": "^5.2.0",
     "graphql-tester": "^0.0.5",
     "jest": "^23.5.0",
     "jest-sonar-reporter": "^2.0.0",
     "shelljs": "^0.8.2",
-    "source-map-support": "^0.5.6",
+    "source-map-support": "^0.5.9",
     "supertest": "^3.1.0",
-    "ts-jest": "^23.1.3",
+    "ts-jest": "^23.1.4",
     "ts-node": "^7.0.0",
     "wait-port": "^0.2.2"
   },
