--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nxplorerjs-micro-starter",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "Express Microservice Starter Mono Repo",
   "main": "index.js",
   "author": "Tarun Kumar Sukhu <tksukhu@gmail.com>",
@@ -23,17 +23,17 @@
     "tslint": "tslint"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "4.0.1",
-    "backpack-core": "^0.7.0",
-    "lerna": "^3.2.1",
-    "prettier": "^1.14.2",
+    "awesome-typescript-loader": "^5.2.1",
+    "backpack-core": "^0.8.2",
+    "lerna": "^3.4.3",
+    "prettier": "^1.14.3",
     "rimraf": "^2.6.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "tslint-config-standard": "^7.1.0",
-    "typedoc": "^0.12.0",
+    "tslint-config-standard": "^8.0.1",
+    "typedoc": "^0.13.0",
     "typedoc-webpack-plugin": "^1.1.4",
-    "typescript": "^3.0.3"
+    "typescript": "^3.1.6"
   },
   "repository": "https://github.com/ERS-HCL/nxplorerjs-mono-starter.git"
 }
