--- a/packages/nxp-core/package.json
+++ b/packages/nxp-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nxp/nxp-core",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "Core Platform Module",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -21,26 +21,26 @@
     "@types/express": "^4.16.0"
   },
   "dependencies": {
-    "apollo-server": "^2.1.0-alpha.10",
-    "apollo-server-express": "^2.1.0-alpha.10",
+    "apollo-server": "^2.1.0",
+    "apollo-server-express": "^2.1.0",
     "brakes": "^2.6.0",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
     "cross-var": "^1.1.0",
     "csurf": "^1.9.0",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "express-partial-response": "^0.3.4",
     "express-physical": "^0.5.2",
     "helmet": "^3.13.0",
-    "inversify": "^4.13.0",
-    "inversify-express-utils": "^6.1.0",
-    "pino": "^5.4.0",
-    "prom-client": "^11.1.1",
+    "inversify": "^5.0.1",
+    "inversify-express-utils": "^6.2.0",
+    "pino": "^5.8.0",
+    "prom-client": "^11.1.3",
     "reflect-metadata": "^0.1.12",
     "response-time": "^2.3.2",
-    "swagger-express-middleware": "1.0.0-alpha.12",
-    "swagger-ui-express": "^4.0.0",
+    "swagger-express-middleware": "^1.1.1",
+    "swagger-ui-express": "^4.0.1",
     "yamljs": "^0.3.0"
   }
 }
