--- a/packages/nxp-swapi-server/package.json
+++ b/packages/nxp-swapi-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nxp/nxp-swapi-server",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "swapi microservice (business apis)",
   "main": "build/index.js",
   "scripts": {
@@ -24,48 +24,48 @@
   "author": "Tarun Sukhu(tksukhu@gmail.com)",
   "license": "MIT",
   "dependencies": {
-    "@nxp/nxp-core": "^1.1.4",
+    "@nxp/nxp-core": "^1.2.0",
     "apollo-datasource-rest": "^2.0.0-rc.8",
-    "apollo-errors": "1.9.0",
-    "apollo-server": "2.1.0-alpha.10",
-    "apollo-server-express": "2.1.0-alpha.10",
+    "apollo-errors": "^1.9.0",
+    "apollo-server": "^2.1.0",
+    "apollo-server-express": "^2.1.0",
     "casual": "^1.5.19",
     "cross-var": "^1.1.0",
     "dataloader": "^1.4.0",
     "dateformat": "^3.0.3",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.1.0",
     "encoding": "^0.1.12",
     "express": "^4.16.3",
     "faker": "^4.1.0",
-    "graphql": "^14.0.0-rc.2",
+    "graphql": "^14.0.2",
     "graphql-import": "^0.6.0",
-    "graphql-request": "^1.7.0",
-    "inversify": "^4.13.0",
+    "graphql-request": "^0.7.1",
+    "inversify": "^5.0.1",
     "inversify-express-utils": "^6.1.0",
     "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "node-fetch": "^2.2.0",
-    "request": "^2.87.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "rxjs": "^6.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
-    "@types/graphql": "^0.13.3",
-    "@types/jest": "^23.3.0",
+    "@types/graphql": "^14.0.3",
+    "@types/jest": "^23.3.8",
     "concurrently": "^4.0.1",
     "cross-env": "^5.2.0",
     "graphql-tester": "^0.0.5",
-    "jest": "^23.5.0",
+    "jest": "^23.6.0",
     "jest-sonar-reporter": "^2.0.0",
     "shelljs": "^0.8.2",
     "source-map-support": "^0.5.9",
-    "supertest": "^3.1.0",
-    "ts-jest": "^23.0.1",
-    "ts-node": "^7.0.0",
+    "supertest": "^3.3.0",
+    "ts-jest": "^23.0.4",
+    "ts-node": "^7.0.1",
     "wait-port": "^0.2.2"
   },
   "peerDependencies": {
-    "graphql": "^0.13.2 || ^14.0.0-rc.2"
+    "graphql": "^0.13.2 || ^14.0.0"
   }
 }
