--- a/packages/nxp-swapi-server/.development.env
+++ b/packages/nxp-swapi-server/.development.env
@@ -7,7 +7,7 @@ TEST_TIME_OUT=10000
 GRAPHQL_SUBSCRIPTIONS=false
 GRAPHQL_PLAYGROUND=true
 GRAPHQL_TRACING=true
-GRAPHQL_MOCK=true
+GRAPHQL_MOCK=false
 API_MOCK=true
 
 # API Base URLS
