--- a/packages/nxp-swapi-server/.production.env
+++ b/packages/nxp-swapi-server/.production.env
@@ -7,8 +7,8 @@ TEST_TIME_OUT=10000
 GRAPHQL_SUBSCRIPTIONS=false
 GRAPHQL_PLAYGROUND=true
 GRAPHQL_TRACING=true
-GRAPHQL_MOCK=true
-API_MOCK=true
+GRAPHQL_MOCK=false
+API_MOCK=false
 
 # API Base URLS
 SWAPI_BASE_URL=http://swapi.co/api
