--- a/packages/nxp-swapi-server/.test.env
+++ b/packages/nxp-swapi-server/.test.env
@@ -5,10 +5,10 @@ JWT_AUTH=false
 API_TIME_OUT=10000
 TEST_TIME_OUT=10000
 GRAPHQL_SUBSCRIPTIONS=false
-GRAPHQL_PLAYGROUND=true
-GRAPHQL_TRACING=true
-GRAPHQL_MOCK=true
-API_MOCK=true
+GRAPHQL_PLAYGROUND=false
+GRAPHQL_TRACING=false
+GRAPHQL_MOCK=false
+API_MOCK=false
 
 # API Base URLS
 SWAPI_BASE_URL=http://swapi.co/api
